# metaclass_study

./: .gitignore  README.md
test/: CMakeLists.txt  indexible.h  indexible_test.cpp  interface.h  interface_test.cpp
